# playwright-examples

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
com.demoqa/: demoqa_text_box_test.py
examples/: async.py  main.py  sync.py  sync_test.py
tests/: example.spec.ts  test-freerangetesters.spec.ts  test-loop-freerangetesters.spec.ts  test-sandbox.spec.ts
