[tool.poetry]
name = "playwright-examples"
version = "0.1.0"
description = ""
authors = ["leandjb <leandjb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "playwright_examples"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
